[project]
name = "mcp-weather-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=3.41.21",
    "mcp[cli]>=1.5.0",
    "python-dotenv>=1.0.1",
    "python-gitlab>=5.6.0",
    "requests>=2.32.3",
]
